In class task 5

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+    <section>
     <main class="structural">
     <h2>Contact</h2>
     <form>
@@ -69,6 +70,7 @@
         <li> <a href="https://developer.mozilla.org/en-US/"> MDN </a></li>
     </ul>
 </aside>
+</section>
 <footer class="structural">
     <p>&copy;Talha Khalifa 2023</p>
 </footer>
